--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -20,3 +20,14 @@ body {
   color: rgb(var(--foreground-rgb));
   background: var(--background-start-rgb);
 }
+
+.scrolly::-webkit-scrollbar {
+  width: 6px;
+}
+.scrolly::-webkit-scrollbar-thumb {
+  background-color: rgba(128, 128, 128, 0.521);
+  border-radius: 6px;
+}
+.scrolly::-webkit-scrollbar-track {
+  background-color: rgba(255, 255, 255, 0.178);
+}
