--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,22 +3,32 @@
 @tailwind utilities;
 
 :root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+  --foreground: #000000;
+  --background-start: #d6dbdc;
+  --background-end: #9e9e9e;
 }
 
-/* @media (prefers-color-scheme: dark) {
+@media (prefers-color-scheme: dark) {
   :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
+    --foreground: #ffffff;
+    --background-start: #4d0000;
+    --background-end: #3c0000;
   }
-} */
+}
 
 body {
-  color: rgb(var(--foreground-rgb));
-  background: var(--background-start-rgb);
+  color: var(--foreground);
+  background: linear-gradient(to bottom, transparent, var(--background-end))
+    var(--background-start);
+}
+
+.input {
+  @apply rounded p-2 bg-transparent focus:outline-none border border-white focus:border-blue-500 w-full;
+}
+
+.text-primary {
+  @apply text-[var(--foreground)];
+  color: var(--foreground);
 }
 
 .scrolly::-webkit-scrollbar {
