--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -44,14 +44,19 @@ body {
 .scrolly::-webkit-scrollbar {
   width: 4px;
 }
+
 .scrolly::-webkit-scrollbar-thumb {
   background-color: rgb(247, 0, 0);
   border-radius: 6px;
 }
+
+.scrolly::-webkit-scrollbar-thumb:hover {
+  background-color: rgb(200, 0, 0);
+}
+
 .scrolly::-webkit-scrollbar-track {
   background-color: rgba(255, 255, 255, 0.178);
 }
-
 .start-left {
   transform: translateX(-100%);
 }
